--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^2.5.2",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.1.1",
     "vue": "latest",
     "vue-router": "latest"
   },
